refactor(wms): 优化地图空值处理和对象映射逻辑
- 将 Map.of() 替换为 java.util.Collections.emptyMap() 提高性能
- 修复货架位置规划中的尺寸计算公式
- 添加空值检查避免潜在的空指针异常
- 优化多个服务类中的批量查询逻辑
- 统一空集合返回方式减少内存占用
- 修正中文字符编码问题确保文本正确显示